<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
    android:orientation="vertical"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="5dp"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tvNo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:textSize="16dp"
            android:textStyle="bold"
            android:textColor="#FF5722"
            android:gravity="start"
            android:text="@string/kra" />
        <TextView
            android:id="@+id/tvMalDesc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.5"
            android:gravity="start"
            android:textSize="14dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/malache_desc" />

        <TextView
            android:id="@+id/tvNag"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:textSize="14dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:gravity="center"
            android:text="@string/nag" />

        <TextView
            android:id="@+id/tvVajan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"

            android:textSize="14dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:gravity="center"
            android:text="@string/vajan" />

        <TextView
            android:id="@+id/tvDar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:textSize="14dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:gravity="center"
            android:text="@string/dar" />

        <TextView
            android:id="@+id/tvTotal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="right"

            android:textSize="14dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_weight="1.5"
            android:text="@string/rakkam" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="#898989"
        />
    </LinearLayout>