<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.PurchaseActivity">


    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/custMobile"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:endIconMode="custom"
                app:endIconDrawable="@drawable/ic_baseline_person_search_24"
                android:hint="@string/contact_no">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/custContactNumber"
                    android:layout_width="match_parent"
                    android:inputType="number"
                    android:maxLength="10"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/custName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>



            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                android:hint="@string/date">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/todayDate"
                    android:layout_width="match_parent"
                    android:inputType="number"
                    android:maxLength="10"
                    android:enabled="false"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    android:textColor="#FF5722"
                    android:gravity="start"
                    android:text="@string/kra" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.7"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    android:textColor="#FF5722"
                    android:gravity="start"
                    android:text="@string/malache_desc" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    android:textColor="#FF5722"
                    android:gravity="center"
                    android:text="@string/nag" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    android:textColor="#FF5722"
                    android:gravity="center"
                    android:text="@string/vajan" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    android:textColor="#FF5722"
                    android:gravity="center"
                    android:text="@string/dar" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    android:textColor="#FF5722"
                    android:layout_weight="1.5"
                    android:text="@string/rakkam" />
            </LinearLayout>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/malList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_mal" />


            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content">


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/aadat">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/commission_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="10"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>

                <Spinner
                    style="@style/Widget.AppCompat.Spinner.DropDown"
                    android:id="@+id/option"
                    android:layout_width="wrap_content"
                    android:layout_weight="0.1"
                    android:entries="@array/takke_array"
                    android:visibility="gone"
                    android:layout_height="match_parent"
                    android:dropDownWidth="match_parent" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:textSize="16dp"
                        android:textStyle="bold"
                        android:textColor="#FF5722"
                        android:layout_weight="1.5"
                        android:text="@string/rakkam" />

                    <TextView
                        android:id="@+id/total"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:textSize="16dp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:layout_weight="1.5"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:textSize="16dp"
                        android:textStyle="bold"
                        android:textColor="#FF5722"
                        android:layout_weight="1.5"
                        android:text="@string/aadat" />

                    <TextView
                        android:id="@+id/kharcheVaja"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:textSize="16dp"
                        android:textStyle="bold"
                        android:textColor="#FF1100"
                        android:layout_weight="1.5"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:textSize="16dp"
                        android:textStyle="bold"
                        android:textColor="#FF5722"
                        android:layout_weight="1.5"
                        android:text="@string/ekun" />

                    <TextView
                        android:id="@+id/ekunDene"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:textSize="16dp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:layout_weight="1.5"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:textSize="16dp"
                        android:textStyle="bold"
                        android:textColor="#FF5722"
                        android:layout_weight="1.5"
                        android:text="@string/magilbaki" />

                    <TextView
                        android:id="@+id/magilBaki"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:textSize="16dp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:layout_weight="1.5"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:gravity="start|center"
                        android:textSize="16dp"
                        android:textStyle="bold"
                        android:textColor="#FF5722"
                        android:layout_weight="1"
                        android:text="@string/jama" />

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="1"
                        android:hint="@string/jama">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tvJama"
                            android:layout_width="match_parent"
                            android:inputType="numberDecimal"
                            android:text="0"
                            android:layout_height="wrap_content" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:gravity="start|center"
                        android:textSize="16dp"
                        android:textStyle="bold"
                        android:textColor="#FF5722"
                        android:layout_weight="1.5"
                        android:text="@string/shillak" />

                    <TextView
                        android:id="@+id/shillakAmt"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:gravity="start|center"
                        android:textSize="16dp"
                        android:textStyle="bold"
                        android:textColor="#FF5722"
                        android:layout_weight="1.5" />

                </LinearLayout>

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Save" />

        </LinearLayout>


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>